[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Melee.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Wander.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="CircleShape2D" id=2]
radius = 269.459

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="Melee" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Wander" parent="." instance=ExtResource( 2 )]

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
